--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "kris/laravel-form-builder",
     "description": "Laravel form builder - symfony like",
+    "keywords": ["laravel", "form", "builder"],
     "license": "MIT",
     "authors": [
         {
