--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ php:
   - 7.1
   - 7.2
 
+env:
+  - COMPOSER_MEMORY_LIMIT=-1
+
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --prefer-source --no-interaction
