--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     ],
     "require": {
         "php": ">=7.1",
-        "laravelcollective/html": "^5.6|^6|^7|^8",
-        "illuminate/database": "^5.6@dev|^6|^7|^8",
-        "illuminate/validation": "^5.6@dev|^6|^7|^8"
+        "laravelcollective/html": "^5.6|^6|^7|^8|^9",
+        "illuminate/database": "^5.6@dev|^6|^7|^8|^9",
+        "illuminate/validation": "^5.6@dev|^6|^7|^8|^9"
     },
     "require-dev": {
         "orchestra/testbench": "^6.13"
