--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
         "orchestra/testbench": "^6.13"
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.51.x-dev"
+        },
         "laravel": {
             "providers": [
                 "Kris\\LaravelFormBuilder\\FormBuilderServiceProvider"
