--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "laravelcollective/html": "^5.6|^6|^7|^8|^9",
-        "illuminate/database": "^5.6@dev|^6|^7|^8|^9",
-        "illuminate/validation": "^5.6@dev|^6|^7|^8|^9"
+        "php": ">=7.4",
+        "laravelcollective/html": "^6",
+        "illuminate/database": "^6 || ^7 || ^8 || ^9 || ^10",
+        "illuminate/validation": "^6 || ^7 || ^8 || ^9 || ^10"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.13"
+        "orchestra/testbench": "^6.13 || ^7.0 || ^8.0"
     },
     "extra": {
         "branch-alias": {
