--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,7 @@ composer.lock
 coverage
 *.taskpaper
 NOTES.md
-.phpunit.result.cache
+/.phpunit.result.cache
+/.phpunit.cache/
+/phpunit.xml.bak
+/coverage.clover
