--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "kris/laravel-form-builder",
     "description": "Laravel form builder - symfony like",
-    "keywords": ["laravel", "form", "builder","symfony"],
+    "keywords": ["laravel", "form", "builder", "symfony"],
     "license": "MIT",
     "authors": [
         {
@@ -10,13 +10,14 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
-        "laravelcollective/html": "^6",
-        "illuminate/database": "^6 || ^7 || ^8 || ^9 || ^10",
-        "illuminate/validation": "^6 || ^7 || ^8 || ^9 || ^10"
+        "php": "^8.0",
+        "rdx/laravelcollective-html": "^6",
+        "illuminate/database": "^6 || ^7 || ^8 || ^9 || ^10 || ^11",
+        "illuminate/validation": "^6 || ^7 || ^8 || ^9 || ^10 || ^11"
     },
     "require-dev": {
-        "orchestra/testbench": "^6.13 || ^7.0 || ^8"
+        "orchestra/testbench": "^6.13 || ^7 || ^8 || ^9",
+        "phpunit/phpunit": "^10.0"
     },
     "extra": {
         "branch-alias": {
